@@ -96,6 +96,7 @@ VolumeUnitm3=m3
 VolumeUnitdm3=dm3 (l)
 VolumeUnitcm3=cm3 (ml)
 VolumeUnitmm3=mm3 (µl)
+VolumeUnitounce=once
 VolumeUnitlitre=litre
 VolumeUnitgallon=gallon
 Size=taille
