@@ -15,6 +15,7 @@ For users:
 - New: For germany, we invert order of address.
 - New: Add hidden option MAIN_SERVICES_ARE_ECOMMERCE_200238EC.
 - New: Support NPR in customer product prices.
+- New: Add more volume units (ounce, gallon, inch, feet, ...)
 - Perf: Avoid reading database to determine country code after each
         page call.
 - Fix: Better Postgresql compatibility.
